--- a/2. Web Development Basics - HTML/class09.html
+++ b/2. Web Development Basics - HTML/class09.html
@@ -8,13 +8,8 @@
     <title>windows </title>
 </head>
 
-<body>
-    <header>
-        <div class="left_headr">
-            
-        </div>
-        <div class="right_headr"></div>
-    </header>
+<br>
+my name is rifat <br> I am from lalpur <br>I a simple person
 </body>
 
 </html>
