--- a/2. Web Development Basics - HTML/class10.html
+++ b/2. Web Development Basics - HTML/class10.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Bangladesh</h1>
+    <h1 align="center">Bangladesh</h1>
+    <hr>
     <h2>Bangladesh</h2>
     <h3>Bangladesh</h3>
     <h4>Bangladesh</h4>
