--- a/2. Web Development Basics - HTML/class22.html
+++ b/2. Web Development Basics - HTML/class22.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="teb">
-        <table style="width:100%">
+        <table style="width:100%;border:2px">
             <tr>
                 <th>Firstname</th>
                 <th>Lastname</th>
