--- a/2. Web Development Basics - HTML/class39.html
+++ b/2. Web Development Basics - HTML/class39.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="">
-        <audio src="">
-            <source>
+        <audio controls>
+            <source src="" type="audio/mpeg">
         </audio>
     </div>
 </body>
