--- a/2. Web Development Basics - HTML/class40.html
+++ b/2. Web Development Basics - HTML/class40.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <video controls>
-        <source src="" type="audio/mpeg">
-    </video>
+    <div class="">
+        <video controls>
+            <source src="" type="audio/mpeg">
+        </video>
+    </div>
+
 </body>
 
 </html>
