--- a/css/class02.html
+++ b/css/class02.html
@@ -1,1 +1,21 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        #tit {
+            color: blue;
+        }
+    </style>
+</head>
+
+<body>
+    <h1 id="tit">working </h1>
+    <p style="color:green">hello world</p>
+</body>
+
+</html>
