--- a/css/class29.html
+++ b/css/class29.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-
+    <div class="nev">
+        <ul>
+            <li><a href="">hoem</a></li>
+            <li><a href="">blog</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">contact</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
