--- a/Bootstrap/class01/index.html
+++ b/Bootstrap/class01/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-
-
+    <h1>Hello World</h1>
+    <button class=" btn btn-primary btn-outline-primary ">Submit</button>
+    <button class=" btn btn-outline-primary ">Submit</button>
 
 
     <script src="js/bootstrap.min.js"></script>
