--- a/Bootstrap/class01/index.html
+++ b/Bootstrap/class01/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Hello World</h1>
     <button class=" btn btn-primary btn-outline-primary ">Submit</button>
-    <button class=" btn btn-outline-primary ">Submit</button>
+    <button class=" btn btn-outline-primary m-4">Submit</button>
 
 
     <script src="js/bootstrap.min.js"></script>
