--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -6,14 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/1366a58b5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <button class=" btn btn-primary btn-outline-primary ">Submit</button>
-    <button class=" btn btn-outline-primary m-4">Submit</button>
+    <div class="container">
+        <header class="bg-primary">
+            <h1>Hello World</h1>
+        </header>
+        <main>
+            <div class="row">
+                <div class="col-lg-3">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
+                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
+                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
+                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                </div>
+                <div class="col-lg-3">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
+                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                </div>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 
 
     <script src="js/bootstrap.min.js"></script>
