--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <header class="bg-primary">
+        <header class="bg-primary text-white py-3 text-center text-md-right text-lg-center">
             <h1>Hello World</h1>
         </header>
         <main>
