--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -17,30 +17,36 @@
             <h1>Hello World</h1>
         </header>
         <main>
-            <div class="row">
-                <div class="col-lg-3">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
-                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
-                </div>
-                <div class="col-lg-3">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
-                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
-                </div>
-                <div class="col-lg-3">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
-                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
-                </div>
-                <div class="col-lg-3">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates cupiditate
-                        explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+            <div class="aa">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <h5>Web Design</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                            cupiditate
+                            explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <h5>Web Design</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                            cupiditate
+                            explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <h5>Web Design</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                            cupiditate
+                            explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <h5>Web Design</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                            cupiditate
+                            explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                    </div>
                 </div>
             </div>
         </main>
