--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -17,35 +17,49 @@
             <h1>Hello World</h1>
         </header>
         <main>
-            <div class="aa">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                        <h5>Web Design</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+            <div class="service-section bg-light pt-3 ">
+                <div class="titel text-center mb-3">
+                    <h3 class="font-weight-bolder">Services</h3>
+                </div>
+                <div class="row text-left text-md-center">
+                    <div class="col-lg-3 col-md-6">
+                        <i class="fas bg-primary text-white p-2 mb-3 fa-2x rounded-circle fa-cloud-upload-alt"></i>
+                        <h5 class="text-uppercase">Web Design</h5>
+                        <p class="samll text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                            similique voluptates
                             cupiditate
                             explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
                     </div>
-                    <div class="col-lg-3">
-                        <i class="fas fa-cloud-upload-alt"></i>
+                    <div class="col-lg-3 col-md-6">
+                        <i class="fas bg-primary text-white p-2 mb-3 fa-2x rounded-circle fa-cloud-upload-alt"></i>
                         <h5>Web Design</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                        <p class="samll text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                            similique voluptates
                             cupiditate
                             explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
                     </div>
-                    <div class="col-lg-3">
-                        <i class="fas fa-cloud-upload-alt"></i>
+                    <div class="col-lg-3 col-md-6">
+                        <i class="fas bg-primary text-white p-2 mb-3 fa-2x rounded-circle fa-cloud-upload-alt"></i>
                         <h5>Web Design</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                        <p class="samll text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                            similique voluptates
                             cupiditate
                             explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
                     </div>
-                    <div class="col-lg-3">
-                        <i class="fas fa-cloud-upload-alt"></i>
+                    <div class="col-lg-3 col-md-6">
+                        <i class="fas bg-primary text-white p-2 mb-3 fa-2x rounded-circle fa-cloud-upload-alt"></i>
                         <h5>Web Design</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque similique voluptates
+                        <p class="samll text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                            similique voluptates
                             cupiditate
                             explicabo, dignissimos earum fugit rerum aspernatur sunt perferendis!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="about-me-section">
+                <div class="a jumbotron">
+                    <div class="titel text-center mb-3">
+                        <h3 class="font-weight-bolder">About</h3>
                     </div>
                 </div>
             </div>
