--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -77,11 +77,49 @@
                                 vero illo ipsum inventore, eaque fugiat nemo id saepe in repellat itaque minus alias
                                 dolorum adipisci similique culpa quod ullam hic quae? Atque animi cum, ipsum amet hic
                                 optio doloribus nostrum!</p>
+                            <button class="btn btn-outline-primary mb-3 ">CV Download</button>
                             <div class="alert alert-success alert-dismissible">
                                 <button class="close" data-dismiss="alert">&times;</button>
                                 visit my youtube <a href="#">here </a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="customer-review bg-light text-center">
+                <div class="titel text-center mb-3">
+                    <h3 class="font-weight-bolder">Customer Review</h3>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <blockquote class="blockquote">
+                            <i class="fas fa-3x p-2 fa-user-circle"></i>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores eaque totam repudiandae
+                                officiis? Ex, eveniet. leraning <abbr title="bootstrap 4">BS4</abbr></p>
+                            <footer class="cl blockquote-footer">
+                                Rifat Abrar Jowad <cite>Youtube</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                    <div class="col-lg-4">
+                        <blockquote class="blockquote">
+                            <i class="fas fa-3x p-2 fa-user-circle"></i>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores eaque totam repudiandae
+                                officiis? Ex, eveniet. leraning <abbr title="bootstrap 4">BS4</abbr></p>
+                            <footer class="cl blockquote-footer">
+                                Rifat Abrar Jowad <cite>Youtube</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                    <div class="col-lg-4">
+                        <blockquote class="blockquote">
+                            <i class="fas fa-3x p-2 fa-user-circle"></i>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores eaque totam repudiandae
+                                officiis? Ex, eveniet. leraning <abbr title="bootstrap 4">BS4</abbr></p>
+                            <footer class="cl blockquote-footer">
+                                Rifat Abrar Jowad <cite>Youtube</cite>
+                            </footer>
+                        </blockquote>
                     </div>
                 </div>
             </div>
