--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -13,8 +13,21 @@
 
 <body>
     <div class="container">
-        <header class="bg-primary text-white py-3 text-center text-md-right text-lg-center">
-            <h1>Hello World</h1>
+        <header class="bg-primary">
+            <div class="row">
+                <div class="col-lg-5">
+                    <h1 class="text-white text-center m-auto py-2">study with Rifat</h1>
+                </div>
+                <div class="col-lg-7">
+                    <ul class="nav py-3 justify-content-center">
+
+                        <li class="nav-item"><a href="" class="text-white nav-link">Home</a></li>
+                        <li class="nav-item"><a href="" class="text-white nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="text-white nav-link">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </header>
         <main>
             <div class="service-section bg-light pt-3 ">
@@ -122,6 +135,23 @@
                         </blockquote>
                     </div>
                 </div>
+            </div>
+            <div class="pagni">
+                <nav aria-label="...">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <span class="page-link">Previous</span>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item active" aria-current="page">
+                            <span class="page-link">2</span>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </main>
         <footer>
