--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -13,19 +13,21 @@
 
 <body>
     <div class="container">
-        <header class="bg-primary">
+        <header class="bg-primary ">
             <div class="row">
-                <div class="col-lg-5">
-                    <h1 class="text-white text-center m-auto py-2">study with Rifat</h1>
-                </div>
-                <div class="col-lg-7">
-                    <ul class="nav py-3 justify-content-center">
+                <nav class="navber">
+                    <div class="col-lg-5">
+                        <h1 class="text-white text-center m-auto py-2">study with Rifat</h1>
+                    </div>
+                    <div class="col-lg-7">
+                        <ul class="nav py-3 justify-content-center">
 
-                        <li class="nav-item"><a href="" class="text-white nav-link">Home</a></li>
-                        <li class="nav-item"><a href="" class="text-white nav-link">About</a></li>
-                        <li class="nav-item"><a href="" class="text-white nav-link">Contact</a></li>
-                    </ul>
-                </div>
+                            <li class="nav-item"><a href="" class="text-white nav-link">Home</a></li>
+                            <li class="nav-item"><a href="" class="text-white nav-link">About</a></li>
+                            <li class="nav-item"><a href="" class="text-white nav-link">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
 
         </header>
