--- a/Bootstrap/class06/index.html
+++ b/Bootstrap/class06/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal site </title>
     <script src="https://kit.fontawesome.com/1366a58b5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -33,7 +33,7 @@
 
         </header>
         <main>
-            <div class="service-section bg-light pt-3 ">
+            <div class="service-section bg-light pt-3 " style="margin-top: 130px;">
                 <div class="titel text-center mb-3">
                     <h3 class="font-weight-bolder">Services</h3>
                 </div>
